--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <title>Kovács Gergő</title>
   </head>
   <body>
+    <!-- #region header -->
+
     <section class="header">
       <nav>
         <a href="index.html"
@@ -44,11 +46,11 @@
         <a href="" class="hero-btn">Visit my portfolio</a>
       </div>
     </section>
+    <!-- endregion -->
 
-       <!----- offer ----->
-
+    <!-- #region offer -->
     <section class="offer">
-      <hr>
+      <hr />
       <h1><span>WHAT I OFFER</span></h1>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 
@@ -76,9 +78,9 @@
         </div>
       </div>
     </section>
+    <!-- endregion -->
 
-    <!----- banner ----->
-
+    <!-- #region banner -->
     <section class="bigbaner">
       <div class="banner1">
         <img src="images/gulf_mclaren.jpg" alt="" />
@@ -113,11 +115,11 @@
         </div>
       </div>
     </section>
+    <!-- endregion -->
 
-    <!----- partners ----->
-
+    <!-- #region partners -->
     <section class="partners">
-      <hr>
+      <hr />
       <h1><span>CURRENT PARTNERS</span></h1>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 
@@ -142,11 +144,11 @@
         </div>
       </div>
     </section>
+    <!-- endregion -->
 
-    <!----- world ----->
-
+    <!-- #region world -->
     <section class="world">
-      <hr>
+      <hr />
       <h1><span>AROUND THE WORLD</span></h1>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 
@@ -177,11 +179,11 @@
         </div>
       </div>
     </section>
+    <!-- endregion -->
 
-    <!----- references ----->
-
+    <!-- #region references -->
     <section class="references">
-      <hr>
+      <hr />
       <h1><span>REFERENCES</span></h1>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
       <div class="row">
@@ -211,19 +213,19 @@
         </div>
       </div>
     </section>
+    <!-- endregion -->
 
-    <!----- contact ----->
-
+    <!-- #region contract -->
     <section class="contact">
-      <hr>
+      <hr />
       <h1><span>CONTACT</span></h1>
       <a href="" class="hero-btn">Booking</a>
     </section>
+    <!-- endregion -->
 
-    <!----- gallery ----->
-
+    <!-- #region gallery -->
     <section class="gallery">
-      <hr>
+      <hr />
       <h1><span>GALLERY</span></h1>
       <div class="full-img" id="fullImgBox">
         <img src="images/gallery1.jpg" id="fullImg" alt="" />
@@ -240,9 +242,9 @@
         <img src="images/gallery8.jpg" onclick="openFull(this.src)" alt="" />
       </div>
     </section>
+    <!-- endregion -->
 
-    <!----- footer ----->
-
+    <!-- #region footer -->
     <section class="footer">
       <h4>About</h4>
       <p>
@@ -259,6 +261,7 @@
       </div>
       <p>Made by : Kovács Gergő</p>
     </section>
+    <!-- endregion -->
 
     <script>
       var navLinks = document.getElementById("navLinks");
